--- a/FL_9_9_homework_tools/homework/package.json
+++ b/FL_9_9_homework_tools/homework/package.json
@@ -36,6 +36,7 @@
     "run-sequence": "^2.2.1"
   },
   "dependencies": {
-    "moment": "^2.21.0"
+    "moment": "^2.21.0",
+    "yarn": "^1.10.1"
   }
 }
